--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <title>Bienvenue sur Gryvernn</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+<div id="warning-popup" class="popup">
+    <div class="popup-content">
+        <h2>Contenu explicite</h2>
+        <p>Ce site contient du contenu explicite (NSFW). Il est réservé à un public majeur (18+). En cliquant sur "Entrer", vous confirmez être majeur.</p>
+        <button id="enter-button">Entrer</button>
+        <button id="exit-button">Quitter</button>
+    </div>
+</div>
+<header>
+    <h1>Bienvenue chez Gryvernn</h1>
+</header>
+<main>
+    <p>Salut ! Voici un petit site minimaliste pour partager mon univers.</p>
+    <nav>
+        <a href="images.html">Images</a>
+        <a href="story.html">Histoire</a>
+    </nav>
+</main>
+<script src="script.js"></script>
 </body>
 </html>
