--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-
+    <link rel="icon" type="image/x-icon" href="img/gryv_title.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="container">
     <img id="bouncing-image" src="img/welcome.webp" alt="Bouncing Image"><p></p>
     <h1 class="welcome-text">Welcome to my website, <br> All art belong to the credited artists</h1>
+    <a href="gallery.html" class="gallery-link">Enter Gallery</a>
     <div class="buttons">
         <a href="https://t.me/gryvernn" class="button telegram" target="_blank">
             <img src="img/tg.ico" alt="Telegram">
@@ -19,7 +20,6 @@
             <img src="img/paypal.ico" alt="PayPal">
         </a>
     </div>
-    <a href="gallery.html" class="gallery-link">Enter Gallery</a>
 </div>
 
 
