--- a/gallery.html
+++ b/gallery.html
@@ -38,6 +38,10 @@
       <img src="img/sfw/wipmoth.webp" alt="SFW Art 6" class="zoomable">
       <a href="https://t.me/TheMothbeeArt" target="_blank" class="credit">© Mothbee</a>
     </div>
+    <div class="image-container">
+      <img src="img/sfw/comigg.webp" alt="SFW Art 6" class="zoomable">
+      <a href="https://t.me/DennDart" target="_blank" class="credit">!WIP! © Denn</a>
+    </div>
   </div>
 
 
